--- a/src/com/chess/view/ChessBoard.fxml
+++ b/src/com/chess/view/ChessBoard.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 
-<VBox prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ChessBoardController">
+<VBox prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chess.ChessBoardController">
   <children>
     <MenuBar prefHeight="19.0" prefWidth="640.0" VBox.vgrow="NEVER">
       <menus>
