--- a/src/com/chess/view/Login.fxml
+++ b/src/com/chess/view/Login.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoginController">
+<AnchorPane prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chess.LoginController">
    <children>
       <Label layoutX="446.0" layoutY="121.0" prefHeight="44.0" prefWidth="250.0" text="Usrename">
          <font>
