--- a/src/com/chess/view/Menu.fxml
+++ b/src/com/chess/view/Menu.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MenuControlller">
+<AnchorPane prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chess.MenuControlller">
    <children>
       <Label contentDisplay="CENTER" layoutX="210.0" layoutY="14.0" prefHeight="38.0" prefWidth="189.0" text="Main Menu" textAlignment="CENTER">
          <font>
