--- a/src/com/chess/view/Register.fxml
+++ b/src/com/chess/view/Register.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RegisterController">
+<AnchorPane prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chess.RegisterController">
    <children>
       <GridPane layoutX="345.0" layoutY="164.0" prefHeight="299.0" prefWidth="568.0">
         <columnConstraints>
