--- a/src/com/chess/view/Main.fxml
+++ b/src/com/chess/view/Main.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chess.MainController">
+<AnchorPane prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chess.MainController">
    <children>
       <ImageView fitHeight="900.0" fitWidth="1600.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../wallpeprs.jpg" />
+            <Image url="@../../../wallpeprs.jpg" />
          </image>
       </ImageView>
       <Button fx:id="btnLogin" layoutX="1100.0" layoutY="100.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="60.0" prefWidth="200.0" text="Login" />
