--- a/src/com/chess/view/Menu.fxml
+++ b/src/com/chess/view/Menu.fxml
@@ -13,7 +13,7 @@
          </font>
       </Label>
       <Button fx:id="btnNewGame" layoutX="219.0" layoutY="72.0" mnemonicParsing="false" onAction="#newGame" prefHeight="25.0" prefWidth="418.0" text="New Game" />
-      <Button fx:id="btnLoadGame" layoutX="219.0" layoutY="112.0" mnemonicParsing="false" onAction="#loadGame" prefHeight="25.0" prefWidth="418.0" text="Load Game" />
+      <Button fx:id="btnLoadGame" layoutX="219.0" layoutY="112.0" mnemonicParsing="false" onAction="#loadGame" prefHeight="25.0" prefWidth="418.0" text="Join Game" />
       <Button fx:id="btnExit" layoutX="219.0" layoutY="152.0" mnemonicParsing="false" onAction="#exit" prefHeight="25.0" prefWidth="418.0" text="Exit" />
    </children>
 </AnchorPane>
